# advanced

./: .editorconfig  logfile.txt  pyproject.toml  test.py
contextmanager/: contextmanager_class.py  main.py
decorator/: 01_basic_decorator.py  02_logging_decorator.py  03_benchmark_decorator.py  04_multiple_decorators.py  05_multiple_decorators_with_parameters.py  06_property.py  07_staticmethod.py  08_calssmethod.py  09_functools_cache.py
generator/: 01_generator.py
logging/: logging_with_color.py
magic_methods/: 01_init.py
patterns/composite/: accounting.py  department.py  development.py  main.py  parent_department.py
patterns/factory/: main.py  person.py  person_factory.py  student.py  teacher.py
patterns/proxy/: main.py  person.py
typing/: basic_homework.py  homework_advanced.py  main.py
